--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
 </head>
 
 <body>
-    <div class="container">
+
+    <div class="container"> 
+    <nav class="nav-top">
+        <a href="#"><img src="img/lambda-black.png"></a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    
    
         <section class="top-content">
+        <img class="jumbo" src="img/jumbo.jpg">
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
@@ -62,12 +73,12 @@
         </section>
         
         <footer>
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+            <nav class="nav-bottom">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </footer>
     </div><!-- container -->        
